--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "homepage": "https://github.com/SazumiVicky/uploadfile#readme",
   "dependencies": {
+    "axios": "^1.4.0",
     "multer": "^1.4.5-lts.1",
     "node-cron": "^3.0.2",
     "server": "^1.0.38",
